[gd_scene load_steps=2 format=3 uid="uid://cg105vm8ocs3o"]

[ext_resource type="Script" path="res://lobby.gd" id="1_27rmw"]

[node name="Lobby" type="Node2D"]
script = ExtResource("1_27rmw")

[node name="Host" type="Button" parent="."]
offset_right = 60.0
offset_bottom = 40.0
text = "HOST"

[node name="Join" type="Button" parent="."]
offset_left = 60.0
offset_right = 120.0
offset_bottom = 40.0
text = "JOIN
"

[node name="Start" type="Button" parent="."]
visible = false
offset_left = 520.0
offset_top = 324.0
offset_right = 626.0
offset_bottom = 364.0
text = "START GAME"

[node name="Username" type="LineEdit" parent="."]
offset_top = 44.0
offset_right = 200.0
offset_bottom = 84.0
placeholder_text = "Username"

[node name="Label" type="Label" parent="."]
offset_left = 3.0
offset_top = 88.0
offset_right = 510.0
offset_bottom = 248.0

[connection signal="pressed" from="Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
